# finite-state-transducer

./: CMakeLists.txt  README.md
graphics/: graphics.ipynb
src/: constructions.h  e-elimination.h  functional-test.h  main.cpp  parser.h  print-util.h  string-util.h  transducer.h  trim.h
test/: ambuguity-test.test.cpp  functional-test.test.cpp  n1+_MCMXXLIMCMX.txt  transducer.test.cpp
